Eu continuo cometendo erros estúpidos perdão

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
-  <link rel="icon" href="../imagens/icon.png">
+  <link rel="icon" href="./imagens/icon.png">
   <title>Ecoenergia</title>
 </head>
 <body>
@@ -35,9 +35,9 @@
     </div>
     <center>
     <div class="imagens">
-    <img src="../imagens/trabalhador_energia_solar.jpg" alt="Um homem coloca placas solares em um telhado." height="150" width="150">
-    <img src="../imagens/eolica.jpg" alt="Moinhos típicos de uma usina de energia eólica, em frente a um pôr-do-sol arroxeado." height="150" width="150">
-    <img src="../imagens/hidreletrica.jpg" alt="Uma barragem de usina hidrelétrica." height="150" width="150">
+    <img src="./imagens/trabalhador_energia_solar.jpg" alt="Um homem coloca placas solares em um telhado." height="150" width="150">
+    <img src="./imagens/eolica.jpg" alt="Moinhos típicos de uma usina de energia eólica, em frente a um pôr-do-sol arroxeado." height="150" width="150">
+    <img src="./imagens/hidreletrica.jpg" alt="Uma barragem de usina hidrelétrica." height="150" width="150">
     </div>
     </center>
     <br>
